plugins {
    id 'java'
    id 'application'
    id 'org.springframework.boot' version '3.5.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'org.postgresql:postgresql'

    implementation 'org.jsoup:jsoup:1.17.2'
    implementation 'org.apache.commons:commons-text:1.11.0'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
    implementation 'org.hibernate.validator:hibernate-validator:8.0.1.Final'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    compileOnly 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

application {
    mainClass = 'com.example.calmall.CalmallApplication'
}

tasks.named('bootRun') {
    mainClass = application.mainClass
}

tasks.named('test') {
    useJUnitPlatform()
}


tasks.register('printMainClass') {
    doLast {
        println "application.mainClass = ${application.mainClass.getOrNull()}"
        println "bootRun.mainClass = ${tasks.named('bootRun').get().mainClass.getOrNull()}"
    }
}

